--- a/scss/_mediaqueries.scss
+++ b/scss/_mediaqueries.scss
@@ -102,6 +102,7 @@ a.dropdown-item{
         align-items: center;
         margin-top: 40px;
         margin-bottom: 80px;
+        grid-template-columns: 10% 40% 40% 10%;
     }
     .prensa__main__link{
         width: 100%;
