--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -7,7 +7,7 @@ hr{
 footer{
     color: $verde;
     font-size: $textofooter;
-    .footer--textoderechos{
+    .texto-derechos{
         color: $fucsia;
     }
 }
