--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -10,7 +10,7 @@
     font-weight: bold;
     font-family: 'Roboto', sans-serif;
 }   
-.menuDecoration a:hover{
+.menu-decoration a:hover{
     background-color: $negro;
     color: $verde;
 }
