--- a/scss/_index.scss
+++ b/scss/_index.scss
@@ -1,7 +1,7 @@
 /*Título Tranki Punki Animado*/
 .container{
     .row{
-        .container__row--titulo-animado {
+        .titulo-animado {
             width: 70%;
             margin-top: 5%;
             animation-duration: 8s;
