--- a/css/estilos.css
+++ b/css/estilos.css
@@ -18,6 +18,7 @@ body h2 {
   font-size: 3em;
   color: #f800ff;
   text-transform: uppercase;
+  margin-top: 2%;
   margin-bottom: 3%;
 }
 
@@ -29,6 +30,14 @@ body h3 {
   font-weight: bold;
   color: #00ff94;
   text-transform: capitalize;
+  margin-bottom: 2rem;
+}
+
+/*Logo del menú*/
+.logo-en-menu {
+  margin-top: 5px;
+  margin-left: 5px;
+  width: 45px;
 }
 
 /*Links*/
@@ -59,7 +68,7 @@ article {
 }
 
 /*Titulo imagen sin animación*/
-.titulo--sin-animacion {
+.titulo-sin-animacion {
   width: 600px;
   padding-top: 3rem;
   padding-bottom: 1rem;
@@ -80,7 +89,7 @@ article {
   font-family: 'Roboto', sans-serif;
 }
 
-.menuDecoration a:hover {
+.menu-decoration a:hover {
   background-color: black;
   color: #00ff94;
 }
@@ -100,7 +109,7 @@ a.dropdown-item {
 }
 
 /*Título Tranki Punki Animado*/
-.container .row .container__row--titulo-animado {
+.container .row .titulo-animado {
   width: 70%;
   margin-top: 5%;
   animation-duration: 8s;
@@ -127,7 +136,7 @@ a.dropdown-item {
 }
 
 /*PÁGINA BIO*/
-.articulo-bio .articulo-bio--texto-en-bloque {
+.articulo-bio .texto-en-bloque {
   margin-left: 10%;
   margin-right: 10%;
   font-size: 1em;
@@ -135,7 +144,7 @@ a.dropdown-item {
 }
 
 /*GRID BIO*/
-.seccion-integrantes .seccion-integrantes__main {
+.seccion-integrantes .main {
   display: grid;
   margin-left: 10%;
   margin-right: 10%;
@@ -144,67 +153,62 @@ a.dropdown-item {
   grid-gap: 10px;
 }
 
-.seccion-integrantes .seccion-integrantes__main .seccion-integrantes__main__integrante {
-  width: 100%;
-  height: 100%;
-}
-
-.seccion-integrantes .seccion-integrantes__main .seccion-integrantes__main__integrante--pola {
-  grid-column-start: 1;
-  grid-row-start: 1;
-}
-
-.seccion-integrantes .seccion-integrantes__main__integrante--vicky {
-  grid-column-start: 1;
-  grid-row-start: 2;
-}
-
-.seccion-integrantes .seccion-integrantes__main__integrante--tuky {
-  grid-column-start: 2;
-  grid-column-end: 4;
-  grid-row-start: 1;
-  grid-row-end: 3;
-}
-
-.seccion-integrantes .seccion-integrantes__main__integrante--drela {
-  grid-column-start: 4;
-  grid-row-start: 1;
-  grid-row-end: 3;
-}
-
-.seccion-integrantes .seccion-integrantes__main__integrante--sofi {
-  grid-column-start: 1;
-  grid-column-end: 3;
-  grid-row-start: 3;
-}
-
-.seccion-integrantes .seccion-integrantes__main__integrante--torchi {
-  grid-column-start: 3;
-  grid-column-end: 5;
-  grid-row-start: 3;
-}
-
-.seccion-integrantes .seccion-integrantes__main__integrante--todas {
+.seccion-integrantes .main .todas {
   grid-column-start: 1;
   grid-column-end: 5;
   grid-row-start: 4;
   grid-row-end: 6;
 }
 
-.seccion-integrantes .seccion-integrantes__main__integrante--crop {
+.seccion-integrantes .main .pola {
+  grid-column-start: 1;
+  grid-row-start: 1;
+}
+
+.seccion-integrantes .vicky {
+  grid-column-start: 1;
+  grid-row-start: 2;
+}
+
+.seccion-integrantes .tuky {
+  grid-column-start: 2;
+  grid-column-end: 4;
+  grid-row-start: 1;
+  grid-row-end: 3;
+}
+
+.seccion-integrantes .drela {
+  grid-column-start: 4;
+  grid-row-start: 1;
+  grid-row-end: 3;
+}
+
+.seccion-integrantes .sofi {
+  grid-column-start: 1;
+  grid-column-end: 3;
+  grid-row-start: 3;
+}
+
+.seccion-integrantes .torchi {
+  grid-column-start: 3;
+  grid-column-end: 5;
+  grid-row-start: 3;
+}
+
+.seccion-integrantes .crop {
   object-fit: cover;
   width: 100%;
   height: 100%;
 }
 
 /*PÁGINA MÚSICA*/
-.section-musica .section-musica__bloque {
+.section-musica .bloque {
   display: flex;
   flex-flow: wrap row;
   justify-content: space-evenly;
 }
 
-.section-musica .section-musica__bloque .section-musica__bloque--iframe-musica {
+.section-musica .bloque .iframe-musica {
   margin-top: 10%;
   margin-bottom: 10%;
   border: 0;
@@ -212,7 +216,7 @@ a.dropdown-item {
   height: 620px;
 }
 
-.section-musica .section-musica__bloque .section-musica__bloque--iframe-musica:hover {
+.section-musica .bloque .iframe-musica:hover {
   transform: scale(1.1, 1.1);
 }
 
@@ -223,11 +227,11 @@ a.dropdown-item {
   justify-content: center;
 }
 
-.videos .videos__cada-video {
+.videos .cada-video {
   padding: 1%;
 }
 
-.videos .videos__cada-video:hover {
+.videos .cada-video:hover {
   transform: scale(1.1, 1.1);
 }
 
@@ -245,7 +249,7 @@ a.dropdown-item {
   margin-right: 150px;
 }
 
-.seccion-prensa .seccion-prensa__main {
+.seccion-prensa .prensa-main {
   display: grid;
   margin-left: 5%;
   margin-right: 5%;
@@ -254,68 +258,90 @@ a.dropdown-item {
   grid-template-columns: 20% 30% 30% 20%;
   grid-template-rows: 33% 33% 34%;
   grid-row-gap: 50px;
-  align-items: center;
 }
 
-.seccion-prensa .seccion-prensa__main__link {
+.seccion-prensa .prensa-link {
   width: 100%;
   height: 100%;
 }
 
-.seccion-prensa .seccion-prensa__main__link--telam {
+.seccion-prensa .telam {
   grid-column-start: 2;
   grid-row-start: 1;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
-.seccion-prensa .seccion-prensa__main__link--lavoz {
+.seccion-prensa .lavoz {
   grid-column-start: 2;
   grid-row-start: 2;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
-.seccion-prensa .seccion-prensa__main__link--cba24n {
+.seccion-prensa .cba24n {
   grid-column-start: 2;
   grid-row-start: 3;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
-.seccion-prensa .seccion-prensa__main__link--indiehoy {
+.seccion-prensa .indiehoy {
   grid-column-start: 3;
   grid-row-start: 1;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
-.seccion-prensa .seccion-prensa__main__link--laizquierdadiario {
+.seccion-prensa .laizquierdadiario {
   grid-column-start: 3;
   grid-row-start: 2;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
-.seccion-prensa .seccion-prensa__main__link--marcha {
+.seccion-prensa .marcha {
   grid-column-start: 3;
   grid-row-start: 3;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
-.seccion-prensa .seccion-prensa__main__link--width {
-  width: 65%;
+.seccion-prensa .prensa-link-width {
+  width: 90%;
 }
 
-.seccion-prensa .seccion-prensa__main__link--width:hover {
+.seccion-prensa .prensa-link-width:hover {
   transform: scale(1.1, 1.1);
 }
 
 /*Formulario*/
-.seccion-contacto .seccion-contacto__formulario {
+.seccion-contacto .formulario {
   padding: 9px;
   font-size: 20px;
 }
 
-.seccion-contacto .seccion-contacto__formulario .seccion-contacto__formulario--boton {
+.seccion-contacto .formulario .textarea-width {
+  width: 750px;
+}
+
+.seccion-contacto .formulario .boton-formulario {
   background-color: black;
   color: #f800ff;
   border-color: #f800ff;
   padding: 15px 32px;
+  margin-top: 10px;
   text-align: center;
   font-size: 20px;
 }
 
-.seccion-contacto .seccion-contacto__formulario .seccion-contacto__formulario--boton:hover {
+.seccion-contacto .formulario .boton-formulario:hover {
   background-color: #00ff94;
   border-color: white;
   color: black;
@@ -333,7 +359,7 @@ footer {
   font-size: 1em;
 }
 
-footer .footer--textoderechos {
+footer .texto-derechos {
   color: #f800ff;
 }
 
@@ -359,14 +385,20 @@ footer .footer--textoderechos {
   article {
     margin-bottom: 30px;
   }
+  /*Logo del menú*/
+  .logo-en-menu {
+    margin-top: 5px;
+    margin-left: 5px;
+    width: 30px;
+  }
   /*Título Tranki Punki*/
-  .titulo--sin-animacion {
+  .titulo-sin-animacion {
     width: 250px;
     padding-top: 1rem;
     padding-bottom: 1rem;
   }
   /*Título Tranki Punki Animado*/
-  .container .row .container__row--titulo-animado {
+  .container .row .titulo-animado {
     width: 100%;
     padding-top: 1rem;
     padding-bottom: 2rem;
@@ -398,17 +430,18 @@ footer .footer--textoderechos {
   }
   /*PÁGINA BIO*/
   /*Grid*/
-  .seccion-integrantes__main {
+  .main {
     width: 70%;
+    margin-bottom: 60px;
   }
   /*PÁGINA GALERÍA*/
   .imgGaleria {
     width: 300px;
   }
   /*PÁGINA MÚSICA*/
-  .section-musica .section-musica__bloque .section-musica__bloque--iframe-musica {
+  .section-musica .bloque .iframe-musica {
     margin-top: 5%;
-    margin-bottom: 5%;
+    margin-bottom: 7%;
     border: 0;
     width: 340px;
     height: 460px;
@@ -419,7 +452,7 @@ footer .footer--textoderechos {
     flex-flow: wrap row;
     justify-content: center;
   }
-  .videos .videos__cada-video {
+  .videos .cada-video {
     max-width: 90%;
     padding: 5%, 5%, 5%, 5%;
   }
@@ -432,53 +465,33 @@ footer .footer--textoderechos {
   }
   /*GRID PRENSA*/
   .seccion-prensa {
-    margin-left: 15px;
-    margin-right: 15px;
+    margin-left: 0px;
+    margin-right: 0px;
   }
-  .seccion-prensa .seccion-prensa__main {
+  .seccion-prensa .prensa-main {
     grid-row-gap: 25px;
-    align-items: center;
     margin-top: 40px;
-    margin-bottom: 80px;
-    grid-template-columns: 10% 40% 40% 10%;
+    margin-bottom: 90px;
+    grid-template-columns: 5% 45% 45% 5%;
   }
-  .seccion-prensa .prensa__main__link {
-    width: 100%;
-    height: 100%;
-  }
-  .seccion-prensa .prensa__main__link--telam {
-    grid-column-start: 1;
-    grid-row-start: 1;
-  }
-  .seccion-prensa .prensa__main__link--indiehoy {
-    grid-column-start: 1;
-    grid-row-start: 2;
-  }
-  .seccion-prensa .prensa__main__link--laizquierdadiario {
-    grid-column-start: 1;
-    grid-row-start: 3;
-  }
-  .seccion-prensa .prensa__main__link--lavoz {
-    grid-column-start: 2;
-    grid-row-start: 1;
-  }
-  .seccion-prensa .prensa__main__link--marcha {
-    grid-column-start: 2;
-    grid-row-start: 2;
-  }
-  .seccion-prensa .prensa__main__link--cba24n {
-    grid-column-start: 2;
-    grid-row-start: 3;
-  }
-  .seccion-prensa .seccion-prensa__main__link--width {
-    width: 70%;
+  .seccion-prensa .prensa-link-width {
+    width: 80%;
   }
   /*CONTACTO FORMULARIO*/
   .seccion-contacto {
     margin-left: 5%;
     margin-right: 5%;
   }
-  .seccion-contacto .seccion-contacto__formulario {
+  .seccion-contacto .formulario {
+    font-size: 1em;
+  }
+  .seccion-contacto .formulario .textarea-width {
+    width: 300px;
+  }
+  .seccion-contacto .formulario .boton-formulario {
+    padding: 5px 32px;
+    margin-top: 10px;
+    text-align: center;
     font-size: 1em;
   }
 }
