--- a/scss/_estilosgenerales.scss
+++ b/scss/_estilosgenerales.scss
@@ -15,6 +15,7 @@ body{
         font-size: $tituloh2;
         color: $fucsia;
         text-transform: uppercase;
+        margin-top: 2%;
         margin-bottom: 3%;
     }
     h3{
@@ -25,7 +26,14 @@ body{
         font-weight: bold;  
         color: $verde;
         text-transform: capitalize;
+        margin-bottom: 2rem;
     }
+}
+/*Logo del menú*/
+.logo-en-menu{
+    margin-top: 5px;
+    margin-left: 5px;
+    width: 45px;
 }
 /*Links*/
 a:link {
@@ -50,7 +58,7 @@ article{
     margin-bottom: 70px;
 }
 /*Titulo imagen sin animación*/
-.titulo--sin-animacion{
+.titulo-sin-animacion{
     width: 600px;
     padding-top: 3rem;
     padding-bottom: 1rem;
