--- a/css/estilos.css
+++ b/css/estilos.css
@@ -148,6 +148,7 @@ a.dropdown-item {
   display: grid;
   margin-left: 10%;
   margin-right: 10%;
+  margin-bottom: 15%;
   grid-template-columns: 25% 25% 25% 25%;
   grid-template-rows: 20% 20% 20% 20% 20%;
   grid-gap: 10px;
@@ -199,6 +200,64 @@ a.dropdown-item {
   object-fit: cover;
   width: 100%;
   height: 100%;
+}
+
+/*CAPTIONS BIO GRID*/
+figure.figurefx {
+  width: 100%;
+  height: 100%;
+  padding: 0;
+  display: block;
+  position: relative;
+  overflow: hidden;
+  /* hide overflowing elements by default */
+}
+
+figure.figurefx figcaption {
+  position: absolute;
+  display: block;
+  box-sizing: border-box;
+  text-align: center;
+  background: white;
+  padding: 15px;
+  z-index: 100;
+  width: 100%;
+  max-height: 100%;
+  overflow: hidden;
+  top: 50%;
+  left: 0;
+  /* position caption outside layout horizontally and centered vertically */
+  transform: translate3d(-100%, -50%, 0);
+  opacity: 0;
+  transition: all 0.5s;
+}
+
+figure.figurefx figcaption a {
+  text-decoration: none;
+}
+
+/*EFECTO PUSHUP BIO GRID*/
+figure.pushup img {
+  transform: translate3d(0, 0, 0);
+  transition: all 0.5s;
+}
+
+figure.pushup figcaption {
+  top: 100%;
+  opacity: 1;
+  transform: translate3d(0, 0, 0);
+}
+
+figure.pushup:hover img {
+  /* move image up vertically a bit for parallax effect */
+  transform: translate3d(0, -20px, 0);
+  opacity: .5;
+}
+
+figure.pushup:hover figcaption {
+  /* move caption up vertically to fully reveal caption */
+  transform: translate3d(0, -100%, 0);
+  transition: all 0.5s;
 }
 
 /*PÁGINA MÚSICA*/
@@ -364,7 +423,7 @@ footer .texto-derechos {
 }
 
 /*MOBILE MEDIA QUERY*/
-@media only screen and (max-width: 768px) {
+@media only screen and (max-width: 768px) and (hover: none), only screen and (max-width: 768px) and (-webkit-transform: none), only screen and (max-width: 768px) and (-moz-transform: none), only screen and (max-width: 768px) and (-ms-high-contrast: none) {
   body {
     font-size: 0.76923em;
     margin-left: 0;
@@ -430,9 +489,47 @@ footer .texto-derechos {
   }
   /*PÁGINA BIO*/
   /*Grid*/
-  .main {
+  .seccion-integrantes main {
     width: 70%;
-    margin-bottom: 60px;
+  }
+  /*CAPTIONS BIO GRID*/
+  figure.figurefx {
+    width: 100%;
+    height: 100%;
+    padding: 0;
+    display: block;
+    position: relative;
+    overflow: hidden;
+    /* hide overflowing elements by default */
+  }
+  figure.figurefx figcaption {
+    position: absolute;
+    display: block;
+    box-sizing: border-box;
+    text-align: center;
+    background: white;
+    padding: 15px;
+    z-index: 100;
+    width: 100%;
+    max-height: 100%;
+    overflow: hidden;
+    top: 50%;
+    left: 0;
+    /* position caption outside layout horizontally and centered vertically */
+    transform: translate3d(-100%, -50%, 0);
+    opacity: 0;
+    transition: all 0.5s;
+  }
+  figure.figurefx figcaption a {
+    text-decoration: none;
+  }
+  /*EFECTO PUSHUP BIO GRID*/
+  figure.pushup figcaption {
+    opacity: 0;
+  }
+  figure.pushup:hover img {
+    transform: none;
+    opacity: 1;
   }
   /*PÁGINA GALERÍA*/
   .imgGaleria {
