--- a/scss/_mediaqueries.scss
+++ b/scss/_mediaqueries.scss
@@ -1,5 +1,6 @@
 /*MOBILE MEDIA QUERY*/
-@media only screen and (max-width: 768px) {
+@media only screen and (max-width: 768px){
+@media (hover:none), (-webkit-transform: none), (-moz-transform: none), (-ms-high-contrast: none) {
 body{
     font-size: $textobody/1.3;
     margin-left: 0;
@@ -63,11 +64,57 @@ a.dropdown-item{
     margin-left: auto;
     margin-bottom: 3px;
 }
-    /*PÁGINA BIO*/
+/*PÁGINA BIO*/
 /*Grid*/
-.main{
-    width: 70%;
-    margin-bottom: 60px;
+.seccion-integrantes{
+    main{
+        width:70%;
+    }
+}
+/*CAPTIONS BIO GRID*/
+figure.figurefx{
+    width: 100%;
+    height:100%;
+    padding: 0;
+    display: block;
+    position: relative;
+    overflow: hidden; /* hide overflowing elements by default */
+    figcaption{
+        position: absolute;
+        display: block;
+        -webkit-box-sizing: border-box;
+        -moz-box-sizing: border-box;
+        box-sizing: border-box;
+        text-align: center;
+        background: white;
+        padding: 15px;
+        z-index: 100;
+        width: 100%;
+        max-height: 100%;
+        overflow: hidden;
+        top: 50%;
+        left: 0;
+        -moz-transform: translate3d(-100%, -50%, 0); /* position caption outside layout horizontally and centered vertically */
+        -webkit-transform: translate3d(-100%, -50%, 0);
+        transform: translate3d(-100%, -50%, 0);
+        opacity: 0;
+        -moz-transition: all 0.5s;
+        -webkit-transition: all 0.5s;
+        transition: all 0.5s;
+        & a{
+            text-decoration: none;
+        }
+    }
+}
+/*EFECTO PUSHUP BIO GRID*/
+figure.pushup{
+    figcaption {
+        opacity: 0;
+    }
+    &:hover img {
+        transform: none;
+        opacity: 1;
+    }
 }
 /*PÁGINA GALERÍA*/
 .imgGaleria{
@@ -131,5 +178,6 @@ a.dropdown-item{
 
         }
     }
+}
 }
 }
