--- a/scss/_mediaqueries.scss
+++ b/scss/_mediaqueries.scss
@@ -67,6 +67,7 @@ a.dropdown-item{
 /*PÁGINA BIO*/
 /*Grid*/
 .seccion-integrantes{
+    margin-bottom: 20%;
     main{
         width:70%;
     }
@@ -115,10 +116,6 @@ figure.pushup{
         transform: none;
         opacity: 1;
     }
-}
-/*PÁGINA GALERÍA*/
-.imgGaleria{
-    width: 300px; 
 }
 /*PÁGINA MÚSICA*/
 .section-musica{
