--- a/scss/_index.scss
+++ b/scss/_index.scss
@@ -3,10 +3,11 @@
     .row{
         .titulo-animado {
             width: 70%;
-            margin-top: 5%;
+            margin-top: 23%;
             animation-duration: 8s;
             animation-name: aparecer;
             animation-iteration-count: 1;
+            animation-fill-mode: both;
             @keyframes aparecer {
                     0% {
                         opacity: 0;
@@ -20,8 +21,16 @@
 }
 /*Vídeo y Player de música*/
 .video{
+    position: absolute;
+    top: 110px;
+    left: 0;
     width: 100%;
+    height: 75%;
+    object-fit: cover;
+    object-position: center;
 }
 .audio-player{
-    width: 100%;
+    margin-top: 16%;
+    margin-bottom: 2%;
+    width: 98%;
 }
