--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -11,17 +11,20 @@
     font-family: 'Roboto', sans-serif;
 }   
 .menu-decoration a:hover{
-    background-color: $negro;
+    background-color: transparent;
     color: $verde;
 }
 .navbar-dark .navbar-nav .nav-link:focus, .navbar-dark .navbar-nav .nav-link:hover{
     color: $verde;
 }
 .dropdown-menu{
-    background-color: $negro;
+    background-color: transparent;
+    border: transparent;
 }
 a.dropdown-item{
     color:$fucsia;
     text-align: left;
     margin-left: -9px;
+    background-color: transparent;
+    border:transparent;
 }
