--- a/scss/_mediaqueries.scss
+++ b/scss/_mediaqueries.scss
@@ -39,8 +39,8 @@ body{
 /*INDEX*/
 /*Título Tranki Punki Animado*/
 .container .row .titulo-animado{
+    margin-top: -170%;
     width: 100%;
-    padding-top: 35%;
     animation-duration: 8s;
     animation-name: aparecer;
     animation-iteration-count: 1;
@@ -56,16 +56,16 @@ body{
 }
 /*Vídeo y Player de música*/
 .video{
-    position: absolute;
-    top: 80px;
+    position: relative;
+    top: 10px;
     left: 0;
     width: 100%;
-    height: 60%;
+    height: 400px;
     object-fit: cover;
     object-position: center;
 }
 .audio-player{
-    margin-top: 50%;
+    margin-top: -12%;
     margin-bottom: 1%;
     width: 90%;
 }
