--- a/css/estilos.css
+++ b/css/estilos.css
@@ -136,14 +136,14 @@ a.dropdown-item {
   top: 110px;
   left: 0;
   width: 100%;
-  height: 70%;
+  height: 75%;
   object-fit: cover;
   object-position: center;
 }
 
 .audio-player {
-  margin-top: 16%;
-  margin-bottom: 2%;
+  margin-top: 18%;
+  margin-bottom: 0%;
   width: 100%;
 }
 
@@ -523,37 +523,6 @@ footer .texto-derechos {
   .seccion-integrantes main {
     width: 70%;
   }
-  /*CAPTIONS BIO GRID*/
-  figure.figurefx {
-    width: 100%;
-    height: 100%;
-    padding: 0;
-    display: block;
-    position: relative;
-    overflow: hidden;
-    /* hide overflowing elements by default */
-  }
-  figure.figurefx figcaption {
-    position: absolute;
-    display: block;
-    box-sizing: border-box;
-    text-align: center;
-    background: white;
-    padding: 15px;
-    z-index: 100;
-    width: 100%;
-    max-height: 100%;
-    overflow: hidden;
-    top: 50%;
-    left: 0;
-    /* position caption outside layout horizontally and centered vertically */
-    transform: translate3d(-100%, -50%, 0);
-    opacity: 0;
-    transition: all 0.5s;
-  }
-  figure.figurefx figcaption a {
-    text-decoration: none;
-  }
   /*EFECTO PUSHUP BIO GRID*/
   figure.pushup figcaption {
     opacity: 0;
@@ -627,6 +596,176 @@ footer .texto-derechos {
   footer .texto-derechos {
     color: #f800ff;
     margin-top: -5%;
+  }
+}
+
+/*MOBILE XL MEDIA QUERY*/
+@media only screen and (min-width: 410px) and (hover: none), only screen and (min-width: 410px) and (-webkit-transform: none), only screen and (min-width: 410px) and (-moz-transform: none), only screen and (min-width: 410px) and (-ms-high-contrast: none) {
+  body {
+    font-size: 0.90909em;
+    margin-left: 0;
+  }
+  body h2 {
+    font-size: 2.5em;
+    margin-bottom: 6%;
+    color: #f800ff;
+  }
+  body h3 {
+    font-size: 1.66667em;
+    margin-bottom: 5%;
+    color: #00ff94;
+  }
+  section {
+    margin-bottom: 30px;
+  }
+  article {
+    margin-bottom: 30px;
+  }
+  /*Logo del menú*/
+  .logo-en-menu {
+    margin-top: 5px;
+    margin-left: 5px;
+    width: 35px;
+  }
+  /*Título Tranki Punki*/
+  .titulo-sin-animacion {
+    width: 300px;
+    padding-top: 1rem;
+    padding-bottom: 1rem;
+  }
+  body {
+    width: 100%;
+  }
+  /*INDEX*/
+  /*Título Tranki Punki Animado*/
+  .container .row .titulo-animado {
+    width: 90%;
+    margin-top: -180%;
+    animation-duration: 8s;
+    animation-name: aparecer;
+    animation-iteration-count: 1;
+    animation-fill-mode: both;
+  }
+  @keyframes aparecer {
+    0% {
+      opacity: 0;
+    }
+    100% {
+      opacity: 1;
+    }
+  }
+  /*Vídeo y Player de música*/
+  .video {
+    position: relative;
+    top: -10px;
+    left: 0;
+    width: 100%;
+    height: 460px;
+    object-fit: cover;
+    object-position: center;
+  }
+  .audio-player {
+    margin-top: -20%;
+    margin-bottom: 1%;
+    width: 90%;
+  }
+  /*Menú*/
+  .dropdown-toggle {
+    margin-bottom: -10px;
+  }
+  a.dropdown-item {
+    color: #f800ff;
+    font-size: 15px;
+    text-align: center;
+    margin-left: auto;
+    margin-bottom: 3px;
+  }
+  /*PÁGINA BIO*/
+  /*Grid*/
+  .seccion-integrantes {
+    margin-bottom: 20%;
+  }
+  .seccion-integrantes main {
+    width: 70%;
+  }
+  /*EFECTO PUSHUP BIO GRID*/
+  figure.pushup figcaption {
+    opacity: 0;
+  }
+  figure.pushup:hover img {
+    transform: none;
+    opacity: 1;
+  }
+  /*PÁGINA MÚSICA*/
+  .section-musica {
+    margin-bottom: -20px;
+  }
+  .section-musica .bloque .iframe-musica {
+    margin-top: 5%;
+    margin-bottom: 7%;
+    border: 0;
+    width: 340px;
+    height: 460px;
+  }
+  /*PÁGINA VÍDEOS*/
+  .videos {
+    margin-bottom: -20px;
+    display: flex;
+    flex-flow: wrap row;
+    justify-content: center;
+  }
+  .videos .cada-video {
+    max-width: 90%;
+    padding: 5%, 5%, 5%, 5%;
+  }
+  /*PÁGINA PRENSA*/
+  .texto-en-bloque {
+    margin-left: 5%;
+    margin-right: 5%;
+    font-size: 1em;
+    text-align: center;
+  }
+  /*GRID PRENSA*/
+  .seccion-prensa {
+    margin-left: 0px;
+    margin-right: 0px;
+  }
+  .seccion-prensa .prensa-main {
+    grid-row-gap: 25px;
+    margin-top: 40px;
+    margin-bottom: 90px;
+    grid-template-columns: 5% 45% 45% 5%;
+  }
+  .seccion-prensa .prensa-link-width {
+    width: 80%;
+  }
+  /*CONTACTO FORMULARIO*/
+  .seccion-contacto {
+    margin-left: 5%;
+    margin-right: 5%;
+  }
+  .seccion-contacto .formulario {
+    font-size: 1em;
+  }
+  .seccion-contacto .formulario .textarea-width {
+    width: 340px;
+  }
+  .seccion-contacto .formulario .boton-formulario {
+    padding: 5px 32px;
+    margin-top: 10px;
+    text-align: center;
+    font-size: 1em;
+  }
+  /*FOOTER*/
+  footer {
+    color: #00ff94;
+    font-size: 1em;
+    margin-top: -1%;
+  }
+  footer .texto-derechos {
+    color: #f800ff;
+    margin-top: -3%;
+    margin-bottom: 10%;
   }
 }
 /*# sourceMappingURL=estilos.css.map */
