--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,4 +1,8 @@
 @charset "UTF-8";
+html {
+  min-height: 100vh;
+}
+
 body {
   background-color: black;
   text-align: center;
@@ -10,6 +14,14 @@ body {
   letter-spacing: 1px;
   line-height: 25px;
   color: white;
+  position: relative;
+  display: flex;
+  min-height: 100vh;
+  flex-direction: column;
+}
+
+body .contenido-del-sitio {
+  flex: 1;
 }
 
 body h2 {
@@ -134,9 +146,35 @@ a.dropdown-item {
 }
 
 /*Título Tranki Punki Animado*/
-.container .row .titulo-animado {
-  width: 70%;
-  margin-top: 20%;
+.container-fluid {
+  /*Vídeo y Player de música*/
+}
+
+.container-fluid .video {
+  position: absolute;
+  top: 0px;
+  left: 0;
+  width: 100%;
+  height: 98vh;
+  object-fit: cover;
+  object-position: center;
+  z-index: -1;
+}
+
+.container-fluid .contenedor-del-titulo-animado {
+  display: flex;
+  width: 99%;
+  height: 90vh;
+  z-index: 0;
+  align-items: center;
+  justify-content: center;
+}
+
+.container-fluid .contenedor-del-titulo-animado .row .titulo-animado {
+  align-items: center;
+  justify-content: center;
+  margin-bottom: 15vh;
+  width: 100%;
   animation-duration: 8s;
   animation-name: aparecer;
   animation-iteration-count: 1;
@@ -152,20 +190,13 @@ a.dropdown-item {
   }
 }
 
-/*Vídeo y Player de música*/
-.video {
+.container-fluid .audio-player {
   position: absolute;
-  top: 110px;
+  bottom: 15px;
   left: 0;
-  width: 100%;
-  height: 75%;
-  object-fit: cover;
-  object-position: center;
-}
-
-.audio-player {
-  margin-top: 18%;
-  margin-bottom: 0%;
+  padding-left: 5px;
+  padding-right: 5px;
+  z-index: 0;
   width: 100%;
 }
 
@@ -182,7 +213,7 @@ a.dropdown-item {
   display: grid;
   margin-left: 10%;
   margin-right: 10%;
-  margin-bottom: 7%;
+  margin-bottom: 0%;
   grid-template-columns: 25% 25% 25% 25%;
   grid-template-rows: 20% 20% 20% 20% 20%;
   grid-gap: 10px;
@@ -346,8 +377,8 @@ figure.pushup:hover figcaption {
   display: grid;
   margin-left: 5%;
   margin-right: 5%;
-  margin-top: 5%;
-  margin-bottom: 12%;
+  margin-top: 3%;
+  margin-bottom: 0%;
   grid-template-columns: 20% 30% 30% 20%;
   grid-template-rows: 33% 33% 34%;
   grid-row-gap: 50px;
@@ -456,6 +487,22 @@ footer .texto-derechos {
   color: #f800ff;
 }
 
+footer .footer-del-index {
+  position: absolute;
+  bottom: -120px;
+  left: 0;
+  z-index: 0;
+  width: 99%;
+}
+
+footer .footer-paginas {
+  position: absolute;
+  bottom: -100px;
+  left: 0;
+  z-index: 0;
+  width: 99%;
+}
+
 /*MOBILE MEDIA QUERY*/
 @media only screen and (min-width: 280px) and (hover: none), only screen and (min-width: 280px) and (-webkit-transform: none), only screen and (min-width: 280px) and (-moz-transform: none), only screen and (min-width: 280px) and (-ms-high-contrast: none) {
   body {
@@ -484,6 +531,10 @@ footer .texto-derechos {
     margin-left: 5px;
     width: 30px;
   }
+  .logo-en-menu:hover {
+    animation: none;
+    transform: none;
+  }
   /*Título Tranki Punki*/
   .titulo-sin-animacion {
     width: 250px;
@@ -492,39 +543,6 @@ footer .texto-derechos {
   }
   body {
     width: 100%;
-  }
-  /*INDEX*/
-  /*Título Tranki Punki Animado*/
-  .container .row .titulo-animado {
-    width: 90%;
-    margin-top: -240%;
-    animation-duration: 8s;
-    animation-name: aparecer;
-    animation-iteration-count: 1;
-    animation-fill-mode: both;
-  }
-  @keyframes aparecer {
-    0% {
-      opacity: 0;
-    }
-    100% {
-      opacity: 1;
-    }
-  }
-  /*Vídeo y Player de música*/
-  .video {
-    position: relative;
-    top: -10px;
-    left: 0;
-    width: 100%;
-    height: 400px;
-    object-fit: cover;
-    object-position: center;
-  }
-  .audio-player {
-    margin-top: -20%;
-    margin-bottom: 1%;
-    width: 90%;
   }
   /*Menú*/
   .dropdown-toggle {
@@ -654,6 +672,10 @@ footer .texto-derechos {
     margin-left: 5px;
     width: 30px;
   }
+  .logo-en-menu:hover {
+    animation: none;
+    transform: none;
+  }
   /*Título Tranki Punki*/
   .titulo-sin-animacion {
     width: 250px;
@@ -665,36 +687,14 @@ footer .texto-derechos {
   }
   /*INDEX*/
   /*Título Tranki Punki Animado*/
-  .container .row .titulo-animado {
-    width: 80%;
-    margin-top: -200%;
-    animation-duration: 8s;
-    animation-name: aparecer;
-    animation-iteration-count: 1;
-    animation-fill-mode: both;
+  .container-fluid {
+    /*Vídeo y Player de música*/
   }
-  @keyframes aparecer {
-    0% {
-      opacity: 0;
-    }
-    100% {
-      opacity: 1;
-    }
-  }
-  /*Vídeo y Player de música*/
-  .video {
-    position: relative;
-    top: -10px;
-    left: 0;
-    width: 100%;
-    height: 400px;
-    object-fit: cover;
-    object-position: center;
-  }
-  .audio-player {
-    margin-top: -20%;
-    margin-bottom: 1%;
+  .container-fluid .contenedor-del-titulo-animado .row .titulo-animado {
     width: 90%;
+  }
+  .container-fluid .audio-player {
+    bottom: 10px;
   }
   /*Menú*/
   .dropdown-toggle {
@@ -820,6 +820,10 @@ footer .texto-derechos {
     margin-left: 5px;
     width: 35px;
   }
+  .logo-en-menu:hover {
+    animation: none;
+    transform: none;
+  }
   /*Título Tranki Punki*/
   .titulo-sin-animacion {
     width: 300px;
@@ -828,39 +832,6 @@ footer .texto-derechos {
   }
   body {
     width: 100%;
-  }
-  /*INDEX*/
-  /*Título Tranki Punki Animado*/
-  .container .row .titulo-animado {
-    width: 90%;
-    margin-top: -180%;
-    animation-duration: 8s;
-    animation-name: aparecer;
-    animation-iteration-count: 1;
-    animation-fill-mode: both;
-  }
-  @keyframes aparecer {
-    0% {
-      opacity: 0;
-    }
-    100% {
-      opacity: 1;
-    }
-  }
-  /*Vídeo y Player de música*/
-  .video {
-    position: relative;
-    top: -10px;
-    left: 0;
-    width: 100%;
-    height: 460px;
-    object-fit: cover;
-    object-position: center;
-  }
-  .audio-player {
-    margin-top: -20%;
-    margin-bottom: 1%;
-    width: 90%;
   }
   /*Menú*/
   .dropdown-toggle {
@@ -987,6 +958,10 @@ footer .texto-derechos {
     margin-left: 5px;
     width: 35px;
   }
+  .logo-en-menu:hover {
+    animation: none;
+    transform: none;
+  }
   /*Título Tranki Punki*/
   .titulo-sin-animacion {
     width: 300px;
@@ -995,39 +970,6 @@ footer .texto-derechos {
   }
   body {
     width: 100%;
-  }
-  /*PÁGINA INDEX*/
-  /*Título Tranki Punki Animado*/
-  .container .row .titulo-animado {
-    width: 90%;
-    margin-top: -160%;
-    animation-duration: 8s;
-    animation-name: aparecer;
-    animation-iteration-count: 1;
-    animation-fill-mode: both;
-  }
-  @keyframes aparecer {
-    0% {
-      opacity: 0;
-    }
-    100% {
-      opacity: 1;
-    }
-  }
-  /*Vídeo y Player de música*/
-  .video {
-    position: relative;
-    top: -10px;
-    left: 0;
-    width: 100%;
-    height: 740px;
-    object-fit: cover;
-    object-position: center;
-  }
-  .audio-player {
-    margin-top: -20%;
-    margin-bottom: 1%;
-    width: 90%;
   }
   /*Menú*/
   .dropdown-toggle {
@@ -1167,39 +1109,6 @@ footer .texto-derechos {
   }
   body {
     width: 100%;
-  }
-  /*PÁGINA INDEX*/
-  /*Título Tranki Punki Animado*/
-  .container .row .titulo-animado {
-    width: 90%;
-    margin-top: -90%;
-    animation-duration: 8s;
-    animation-name: aparecer;
-    animation-iteration-count: 1;
-    animation-fill-mode: both;
-  }
-  @keyframes aparecer {
-    0% {
-      opacity: 0;
-    }
-    100% {
-      opacity: 1;
-    }
-  }
-  /*Vídeo y Player de música*/
-  .video {
-    position: relative;
-    top: -10px;
-    left: 0;
-    width: 100%;
-    height: 740px;
-    object-fit: cover;
-    object-position: center;
-  }
-  .audio-player {
-    margin-top: -20%;
-    margin-bottom: 1%;
-    width: 90%;
   }
   /*Menú*/
   .dropdown-toggle {
@@ -1378,24 +1287,6 @@ footer .texto-derechos {
     text-align: right;
     margin-left: -55px;
     margin-bottom: 3px;
-  }
-  /*PÁGINA INDEX*/
-  /*Título Tranki Punki Animado*/
-  .container .row .titulo-animado {
-    width: 90%;
-    margin-top: -130%;
-    animation-duration: 8s;
-    animation-name: aparecer;
-    animation-iteration-count: 1;
-    animation-fill-mode: both;
-  }
-  @keyframes aparecer {
-    0% {
-      opacity: 0;
-    }
-    100% {
-      opacity: 1;
-    }
   }
 }
 /*# sourceMappingURL=estilos.css.map */
