--- a/scss/_estilosgenerales.scss
+++ b/scss/_estilosgenerales.scss
@@ -1,3 +1,6 @@
+html{
+    min-height: 100vh;   
+}
 body{
     background-color: $negro;
     text-align: center;
@@ -9,6 +12,13 @@ body{
     letter-spacing: 1px;
     line-height: 25px;
     color: $blanco;
+    position: relative;
+    display: flex;
+    min-height: 100vh;
+    flex-direction: column;
+    .contenido-del-sitio{
+        flex: 1;
+    }
     h2{
         font-family: 'Oswald', sans-serif;
         font-weight: bold; 
