--- a/scss/_index.scss
+++ b/scss/_index.scss
@@ -1,36 +1,51 @@
 /*Título Tranki Punki Animado*/
-.container{
-    .row{
-        .titulo-animado {
-            width: 70%;
-            margin-top: 20%;
-            animation-duration: 8s;
-            animation-name: aparecer;
-            animation-iteration-count: 1;
-            animation-fill-mode: both;
-            @keyframes aparecer {
-                    0% {
-                        opacity: 0;
-                        }
-                    100% {
-                        opacity: 1;
-                        }
+.container-fluid{
+    .video{
+        position: absolute;
+        top: 0px;
+        left: 0;
+        width: 100%;
+        height: 98vh;
+        object-fit: cover;
+        object-position: center;
+        z-index: -1;
+    }
+    .contenedor-del-titulo-animado{
+        display: flex;
+        width: 99%;
+        height: 90vh;
+        z-index: 0;
+        align-items: center;
+        justify-content: center;
+        .row{
+            .titulo-animado {
+                align-items: center;
+                justify-content: center;
+                margin-bottom: 15vh;
+                width:100%;
+                animation-duration: 8s;
+                animation-name: aparecer;
+                animation-iteration-count: 1;
+                animation-fill-mode: both;
+                @keyframes aparecer {
+                        0% {
+                            opacity: 0;
+                            }
+                        100% {
+                            opacity: 1;
+                            }
+                }
             }
         }
     }
-}
-/*Vídeo y Player de música*/
-.video{
-    position: absolute;
-    top: 110px;
-    left: 0;
-    width: 100%;
-    height: 75%;
-    object-fit: cover;
-    object-position: center;
-}
-.audio-player{
-    margin-top: 18%;
-    margin-bottom: 0%;
-    width: 100%;
+    /*Vídeo y Player de música*/
+    .audio-player{
+        position: absolute;
+        bottom: 15px;
+        left: 0;
+        padding-left: 5px;
+        padding-right: 5px;
+        z-index: 0;
+        width: 100%;
+    }
 }
