--- a/scss/_mediaquerymobile.scss
+++ b/scss/_mediaquerymobile.scss
@@ -26,6 +26,10 @@
         margin-top: 5px;
         margin-left: 5px;
         width: 30px;
+        &:hover{
+            animation: none;
+            transform: none;
+        }
     }
     /*Título Tranki Punki*/
     .titulo-sin-animacion{
@@ -38,36 +42,18 @@
     }
     /*INDEX*/
     /*Título Tranki Punki Animado*/
-    .container .row .titulo-animado{
-        width: 80%;
-        margin-top: -200%;
-        animation-duration: 8s;
-        animation-name: aparecer;
-        animation-iteration-count: 1;
-        animation-fill-mode: both;
-    }
-    @keyframes aparecer {
-        0% {
-            opacity: 0;
+    .container-fluid{
+        .contenedor-del-titulo-animado{
+            .row{
+                .titulo-animado{
+                    width:90%;
+                }
             }
-        100% {
-            opacity: 1;
-            }
-    }
-    /*Vídeo y Player de música*/
-    .video{
-        position: relative;
-        top: -10px;
-        left: 0;
-        width: 100%;
-        height: 400px;
-        object-fit: cover;
-        object-position: center;
-    }
-    .audio-player{
-        margin-top: -20%;
-        margin-bottom: 1%;
-        width: 90%;
+        }
+        /*Vídeo y Player de música*/
+        .audio-player{
+            bottom: 10px;
+        }
     }
     /*Menú*/
     .dropdown-toggle{
@@ -154,7 +140,6 @@
                 margin-top: 10px;
                 text-align: center;
                 font-size: $textobody;
-    
             }
         }
     }
