Rediseño de footer en index

--- a/scss/_estilosgenerales.scss
+++ b/scss/_estilosgenerales.scss
@@ -19,6 +19,12 @@ body{
     .contenido-del-sitio{
         flex: 1;
     }
+    h1{
+        font-family: 'Oswald', sans-serif;
+        font-weight: bold;
+        color: $fucsia;
+        font-size: $tituloh1;
+    }
     h2{
         font-family: 'Oswald', sans-serif;
         font-weight: bold; 
@@ -44,13 +50,11 @@ body{
     margin-top: 5px;
     margin-left: 5px;
     width: 45px;
-    &:hover{
-        @include sacudir;
-    }
+    @include sacudir
 }
 /*Links*/
 a:link {
-    color: #00ff94;
+    color: $verde;
     font-weight: bold;
 }
 /*Links visitados*/
@@ -60,7 +64,7 @@ a:visited {
 }
 /*Hover links*/
 a:hover {
-    color: #f800ff;
+    color: $fucsia;
 } 
 /*Sections*/
 section{
