--- a/scss/_index.scss
+++ b/scss/_index.scss
@@ -8,6 +8,7 @@
         height: 98vh;
         object-fit: cover;
         object-position: center;
+        opacity:1;
         z-index: -1;
     }
     .contenedor-del-titulo-animado{
