--- a/scss/_mediaqueries.scss
+++ b/scss/_mediaqueries.scss
@@ -1,7 +1,7 @@
-@import "mediaquerymobilexs";
-@import "mediaquerymobile";
-@import "mediaquerymobilexl";
-@import "mediaquerytablet";
+@import "mediaquerymobilexlportrait";
+@import "mediaquerymobilexsportrait";
+@import "mediaquerymobileportrait";
+@import "mediaquerytabletportrait";
 @import "mediaquerynotebook";
 @import "mediaqueryipad";
 
