--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -5,17 +5,33 @@ hr{
     border: none;
 }
 footer{
-    color: $verde;
-    font-size: $textofooter;
-    .texto-derechos{
-        color: $fucsia;
+    .color-blanco{
+        font-size: $textofooter;
+        color: $blanco;
+        .color-fucsia{
+            font-size: $textofooter*1.3;
+            color: $fucsia;
+            font-weight: bold;
+            text-decoration-line: none;
+            &:hover{
+                color: $verde;
+            }
+        }
+    }
+    .color-verde{
+        font-size: $textofooter;
+        color: $verde;
     }
     .footer-del-index{
         position: absolute;
-        bottom: -120px;
+        bottom: -350px;
         left: 0;
         z-index:0;
         width: 99%;
+        h1{
+            margin-top: 2%;
+            margin-bottom: 2%;
+        }
     }
     .footer-paginas{
         position: absolute;
@@ -23,5 +39,136 @@ footer{
         left: 0;
         z-index:0;
         width: 99%;
+    }
+    .nav-del-footer{
+        .nav-del-footer-main{
+            display: grid;
+            margin-left: 13%;
+            margin-right: 16%;
+            margin-top: 1%;
+            margin-bottom: 1%;
+            grid-template-columns: 30% 5% 4% 6% 6% 6% 7% 7% 29%;
+            grid-template-rows: 100%;
+            grid-row-gap: 50px;
+        }
+        .inicio-li{
+            grid-column-start: 2; 
+            grid-row-start: 1;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+        }
+        .bio-li{
+            grid-column-start: 3;  
+            grid-row-start: 1;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+        }
+        .musica-li{
+            grid-column-start: 4;  
+            grid-row-start: 1;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+        }
+        .videos-li{
+            grid-column-start: 5;  
+            grid-row-start: 1;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+        }
+        .galeria-li{
+            grid-column-start: 6;  
+            grid-row-start: 1;
+            display: flex;
+            align-items: center;
+            justify-content: center;        
+        }
+        .prensa-li{
+            grid-column-start: 7;  
+            grid-row-start: 1;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+        }
+        .contacto-li{
+            grid-column-start: 8;  
+            grid-row-start: 1;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+        }
+        .footer-nav-link{
+            font-size: $textofooter;
+            color:gray;
+            text-decoration-line:none;
+            &:hover{
+                color:$fucsia;
+            }
+        }
+    }
+    .rrss{
+        margin-top: 3%;
+        margin-bottom: 3%;
+        margin-left: 40%;
+        margin-right: 40%;
+        .rrss-main{
+            display: grid;
+            grid-template-columns: 17% 17% 16% 16% 17% 17%;
+            grid-template-rows: 0;
+            grid-row-gap: 0px;
+        }
+        .rrss-link{
+            width: 100%;
+            height: 100%;
+        }
+        .instagram{
+            grid-column-start: 1; 
+            grid-row-start: 1;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+        }
+        .facebook{
+            grid-column-start: 2;  
+            grid-row-start: 1;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+        }
+        .youtube{
+            grid-column-start: 3;  
+            grid-row-start: 1;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+        }
+        .twitter{
+            grid-column-start: 4;  
+            grid-row-start: 1;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+        }
+        .spotify{
+            grid-column-start: 5;  
+            grid-row-start: 1;
+            display: flex;
+            align-items: center;
+            justify-content: center;        
+        }
+        .whatsapp{
+            grid-column-start: 6;  
+            grid-row-start: 1;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+        }
+        .rrss-width{
+            width: 60%;
+            @include sacudir;
+        }
     }
 }
