--- a/scss/_mixins.scss
+++ b/scss/_mixins.scss
@@ -7,24 +7,39 @@
     transform: scale(1.1,1.1);
 }
 @mixin sacudir{
-    animation: shake 0.82s cubic-bezier(.36,.07,.19,.97) both;
-    transform: translate3d(0, 0, 0);
-    backface-visibility: hidden;
-    perspective: 1000px;
-    @keyframes shake{
-        10%, 90%{
-            transform: translate3d(-1px, 0, 0);
-        }
-        20%, 80%{
-            transform: translate3d(2px, 0, 0);
-        }
-        30%, 50%, 70%{
-            transform: translate3d(-4px, 0, 0);
-        }
-        40%, 60%{
-            transform: translate3d(4px, 0, 0);
+    &:hover{
+        animation: shake 0.82s cubic-bezier(.36,.07,.19,.97) both;
+        transform: translate3d(0, 0, 0);
+        backface-visibility: hidden;
+        perspective: 1000px;
+        @keyframes shake{
+            10%, 90%{
+                transform: translate3d(-1px, 0, 0);
+            }
+            20%, 80%{
+                transform: translate3d(2px, 0, 0);
+            }
+            30%, 50%, 70%{
+                transform: translate3d(-4px, 0, 0);
+            }
+            40%, 60%{
+                transform: translate3d(4px, 0, 0);
+            }
         }
     }
 }
+@mixin nohover{
+    &:hover{
+        animation: none;
+        transform: none;
+        -webkit-transform: none;
+        -moz-transform: none;
+        opacity: 1;
+        -moz-transition: none;
+        -webkit-transition:none;
+        transition: none;
+    }
+}
+
 
 
