--- a/scss/_mediaquerymobileportrait.scss
+++ b/scss/_mediaquerymobileportrait.scss
@@ -1,5 +1,5 @@
 /*MOBILE MEDIA QUERY*/
-@media only screen and (min-width: 360px) and (orientation: portrait){
+@media only screen and (min-width: 360px) and (max-width: 640px) and (orientation: portrait){
 /*Estilos generales*/
 body{
     font-size: $textobody/1.3;
@@ -103,7 +103,7 @@ figure.pushup{
     margin-left: 0px;
     margin-right: 0px;
     .prensa-main{
-        grid-row-gap: 25px;
+        grid-row-gap: 40px;
         margin-top: 40px;
         margin-bottom: 90px;
         grid-template-columns: 5% 45% 45% 5%;
