--- a/scss/_mediaquerymobilexlportrait.scss
+++ b/scss/_mediaquerymobilexlportrait.scss
@@ -1,5 +1,5 @@
 /*MOBILE XL MEDIA QUERY*/
-@media only screen and (min-width: 375px) and (max-width: 667px) and (-webkit-min-device-pixel-ratio: 2) and (orientation: portrait){
+@media only screen and (min-width: 375px) and (-webkit-min-device-pixel-ratio: 2) and (orientation: portrait){
     /*Estilos generales*/
     body{
         font-size: $textobody;
@@ -96,7 +96,7 @@
         margin-left: 0px;
         margin-right: 0px;
         .prensa-main{
-            grid-row-gap: 25px;
+            grid-row-gap: 80px;
             margin-top: 40px;
             margin-bottom: 90px;
             grid-template-columns: 5% 45% 45% 5%;
